--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
     font-family: 'Courier New', Courier, monospace;
 }
 
-#menu {
+#menu, #subMenu {
     position: absolute;
     width: 150px;
     background-color: #f9f9f9;
@@ -16,14 +16,14 @@
     border-radius: 5px;
 }
 
-#menu>div {
+#menu>div, #subMenu>div {
     padding: 5px;
     cursor: pointer;
 
     transition: background-color 0.2s ease-in-out;
 }
 
-#menu>div:hover {
+#menu>div:hover, #subMenu>div:hover {
     background-color: #e0e0e0;
 }
 
