--- a/style.css
+++ b/style.css
@@ -7,6 +7,14 @@
     font-family: 'Courier New', Courier, monospace;
 }
 
+body, html {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background-color: #ffffff;
+    position: relative;
+}
+
 #menu, #subMenu {
     position: absolute;
     width: 150px;
